--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#products" class="btn">Shop Now</a>
     </div>
     <div class="hero-img">
-      <img src="C:\Users\akhil\OneDrive\Desktop\Don't delete\Skincare1.jpg" alt="Skincare">
+      <img src="images/Skincare1.jpg" alt="Skincare">
     </div>
   </section>
 
@@ -34,19 +34,19 @@
     <h2>Bestsellers</h2>
     <div class="products-grid">
       <div class="product-card">
-        <img src="C:\Users\akhil\OneDrive\Desktop\Don't delete\cleanser.jpg" alt="Cleanser">
+        <img src="images/cleanser.jpg" alt="Cleanser">
         <h3>Gentle Cleanser</h3>
         <p>Cleanse and refresh your skin without stripping natural oils.</p>
         <span class="price">₹499</span>
       </div>
       <div class="product-card">
-        <img src="C:\Users\akhil\OneDrive\Desktop\Don't delete\moisturiser.jpg" alt="Moisturizer">
+        <img src="images/moisturiser.jpg" alt="Moisturizer">
         <h3>Hydrating Moisturizer</h3>
         <p>Lock in moisture for soft, supple skin all day long.</p>
         <span class="price">₹699</span>
       </div>
       <div class="product-card">
-        <img src="C:\Users\akhil\OneDrive\Desktop\Don't delete\sunscreen.jpg" alt="Sunscreen">
+        <img src="images/sunscreen.jpg" alt="Sunscreen">
         <h3>SPF 50 Sunscreen</h3>
         <p>Protect your skin from harmful UV rays with lightweight coverage.</p>
         <span class="price">₹799</span>
@@ -85,4 +85,5 @@
     });
   </script>
 </body>
+
 </html>
